--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Income Pro | Earning App</title>
+    <title>Green Income</title>
     
     <!-- Third-party Ad SDK -->
     <script src='//libtl.com/sdk.js' data-zone='10012357' data-sdk='show_10012357'></script>
@@ -1040,3 +1040,4 @@
     </script>
 </body>
 </html>
+
