--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <!-- Profile Summary -->
                 <div class="card-bg p-4 rounded-2xl flex flex-col items-center">
                     <div class="w-20 h-20 rounded-full mb-3 border-4 border-green-200 overflow-hidden">
-                        <!-- Default avatar placeholder set to LOGO (simulating logo1.jpg) -->
+                        <!-- Default avatar placeholder set to LOGO (simulating logo1.jpg.png) -->
                         <img id="profile-avatar" src="https://placehold.co/80x80/10b981/ffffff?text=LOGO" alt="Profile Avatar" class="w-full h-full object-cover">
                     </div>
                     <div class="flex items-center space-x-2 mb-1">
